@@ -4,7 +4,7 @@
 \title{News for \R{} Package \pkg{Matrix}}
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
-\section{Changes in version 1.6-5 (2024-01-03 r4545)}{
+\section{Changes in version 1.6-5 (2024-01-06 r4556)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{x[]} works for \code{x} inheriting from virtual class
@@ -19,6 +19,10 @@
 
       \item \code{tri[ul](<indMatrix>, k)} now works correctly for
       \code{k != 0}.
+
+      \item \proglang{C} API function \code{cholmod_triplet_as_sexp}
+      transposes entries \dQuote{opposite} the \code{stype} when that
+      is nonzero, following CHOLMOD.
     }
   }
   \subsection{Misc}{
